--- a/gallery.html
+++ b/gallery.html
@@ -141,7 +141,7 @@ cn:hover {
 	<div class="main">
 		<div class="navbar">
 			<div class="icon">
-				<img src="logo2.jpg" class="no" width="100" height="80">
+				<img src="logo2.JPG" class="no" width="100" height="80">
 			</div>
 			<br/>
 			<div class="menu">
